# Proxima

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULES.md  NOTES.md  README.md  README_rour.md  README_ru.md  RESEARCH.md  SECURITY.md  TESTING.md  package-lock.json  package.json
assets/: brainstorm-app-icon.icns
proxima-agent/: README.md  pyproject.toml
proxima-agent/proxima_agent/: __init__.py  agent.py  cli.py  config.py  error_classifier.py  gate.py  permissions.py  retry_utils.py
proxima-agent/proxima_agent/brain/: __init__.py  bucket.py  memory.py  planner.py  state.py  tracker.py  verifier.py
proxima-agent/proxima_agent/multi_agent/: __init__.py  peers.py  prompt_full.py  prompt_light.py  subagent.py
proxima-agent/proxima_agent/prompt/: __init__.py  dynamic_session_prompt.py  full_prompt.py  light_prompt.py  principles.py  skills.py
proxima-agent/proxima_agent/recall/: __init__.py  brain_ops.py  compactor.py  insights.py  strategies.py  vault.py
proxima-agent/proxima_agent/tools/: __init__.py  _exec_worker.py  _web_scrape_patch.py  analytics.py  attach.py  browser_cdp.py  code_env.py  execute.py  health.py  learned_fixes.py  ocr.py  parallel.py  registry.py  replay.py  retry.py  self_heal.py  snapshots.py  tool_docs.py  trace_viewer.py  utils.py  verification.py  web_extract.py
proxima-agent/proxima_agent/web/: __init__.py  __main__.py  agent_bridge.py  db.py  server.py
proxima-agent/tests/: test_analytics.py  test_brain_memory.py  test_brain_verifier.py  test_bucket.py  test_cli.py  test_code_intel.py  test_config.py  test_dynamic_session_prompt.py  test_file_ops.py  test_flex_edit.py  test_gate.py  test_git_ops.py  test_health.py  test_learned_fixes.py  test_multi_agent_peers.py  test_multi_agent_subagent.py  test_permissions.py  test_planner.py  test_recall_brain_ops.py  test_recall_compactor.py  test_recall_insights.py  test_recall_vault.py  test_repo_intel.py  test_retry_utils.py  test_search_ops.py  test_self_heal.py  test_shell_ops.py  test_snapshots.py  test_state_probe.py  test_strategies.py  test_tool_registry_consistency.py  test_tools_utils.py  test_tracker.py  test_verification.py
sdk/python/: README.md  pyproject.toml
(+253 files in other folders)
