[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxima-agent"
version = "5.0.0"
description = "AI Agent powered by Proxima — dynamic Python execution with full computer access"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "pytesseract>=0.3.10",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "comtypes>=1.2.0; sys_platform == 'win32'",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
proxima-agent = "proxima_agent.cli:_safe_main"

[tool.setuptools.packages.find]
include = ["proxima_agent", "proxima_agent.*"]
