[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxima-sdk"
version = "1.0.0"
description = "Python SDK for Proxima AI Gateway — Free, local, OpenAI-compatible AI gateway"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Zen4-bit", email = "zen4bit@proxima.ai"}
]
keywords = ["ai", "gateway", "openai", "claude", "chatgpt", "gemini", "perplexity", "proxima"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
all = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://github.com/zen4-bit/proxima"
Documentation = "https://github.com/zen4-bit/proxima#python-sdk"
Repository = "https://github.com/zen4-bit/proxima"
